--- a/src/App.scss
+++ b/src/App.scss
@@ -88,6 +88,7 @@ $cmured : rgba(196, 30, 58, 1);
         margin:0 20px;
         color:rgba(0,0,0,0.5);
         font-size: 16px;
+        
     }
 }
 .mainContent{
@@ -106,7 +107,7 @@ $cmured : rgba(196, 30, 58, 1);
         }
         #head{
             width:50%;
-            transition: .1s;
+            transition: .15s;
         }
         #body{
             width: 100%;
@@ -131,6 +132,19 @@ $cmured : rgba(196, 30, 58, 1);
             font: {
                 size: 16px;
             }
+            &.center{
+                width: 100%;
+                text-align: center;
+                font: {
+                    size:18px;
+                    weight: bold;
+                }
+            }
+        }
+        .chart{
+            width: 100%;
+            text-align: center;
+            margin:30px 0;
         }
     }
 }
